--- a/index.html
+++ b/index.html
@@ -10,23 +10,9 @@
         }
     </style>
     <title>Document</title>
+    <script src="doodlejump.js"></script>
 </head>
 <body onload="startGame()">
-<script>
 
-function startGame() {
-    myGameArea.start();
-}
-
-var myGameArea = {
-    canvas : document.createElement("canvas"),
-    start : function() {
-        this.canvas.width = 480;
-        this.canvas.height = 620;
-        this.context = this.canvas.getContext("2d");
-        document.body.insertBefore(this.canvas, document.body.childNodes[0]);
-    }
-}
-</script>
 </body>
 </html>
