--- a/index.html
+++ b/index.html
@@ -3,16 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        canvas {
-            border: 1px solid #d3d3d3;
-            background-color: #f1f1f1;
-        }
-    </style>
-    <title>Document</title>
+    <title>Doodle Jump</title>
+    <link rel="stylesheet" href="master.css">
     <script src="doodlejump.js"></script>
 </head>
-<body onload="startGame()">
-
+<body>
+    <canvas id="screen"></canvas>
 </body>
 </html>
