Script src rename

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doodle Jump</title>
     <link rel="stylesheet" href="master.css">
-    <script src="doodlejump.js"></script>
+    <script src="verticalplatformer.js"></script>
 </head>
 <body>
     <canvas id="screen"></canvas>
