--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <script src="verticalplatformer.js"></script>
 </head>
 <body>
-    <canvas id="screen"></canvas>
+    <canvas id="board"></canvas>
 </body>
 </html>
