--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="verticalplatformer.js"></script>
 </head>
 <body>
-    <canvas id="board"></canvas>
+    
+    <div id="container">
+        <canvas id="board"></canvas>
+    </div>
 </body>
 </html>
