--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <script src="verticalplatformer.js"></script>
 </head>
 <body>
-    
-    <div id="container">
+    <div id="background">
         <canvas id="board"></canvas>
     </div>
 </body>
