--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Vertical Platformer</title>
     <link rel="stylesheet" href="master.css">
     <script src="verticalplatformer.js"></script>
+    <script src="enemy.js"></script>
 </head>
 <body>
     <div id="background">
