--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="master.css">
     <script src="verticalplatformer.js"></script>
     <script src="enemy.js"></script>
+    <script src="bullet.js"></script>
 </head>
 <body>
     <div id="background">
