--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="verticalplatformer.js"></script>
     <script src="enemy.js"></script>
     <script src="bullet.js"></script>
+    <script src="powers.js"></script>
     <script src="background.js"></script>
 </head>
 <body>
