--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vertical Platformer</title>
     <link rel="stylesheet" href="master.css">
+    <script src="menu.js"></script>
     <script src="verticalplatformer.js"></script>
     <script src="enemy.js"></script>
     <script src="powers.js"></script>
