Restructured the file.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vertical Platformer</title>
-    <link rel="stylesheet" href="master.css">
-    <script src="menu.js"></script>
-    <script src="verticalplatformer.js"></script>
-    <script src="enemy.js"></script>
-    <script src="powers.js"></script>
-    <script src="bullet.js"></script>
-    <script src="background.js"></script>
+    <link rel="stylesheet" href="./css/master.css">
+    <script src="./js/menu.js"></script>
+    <script src="./js/verticalplatformer.js"></script>
+    <script src="./js/enemy.js"></script>
+    <script src="./js/powers.js"></script>
+    <script src="./js/bullet.js"></script>
+    <script src="./js/background.js"></script>
 </head>
 <body>
     <div id="background">
